unpackaged/main/default/objects/Incident__c/Incident__c.object-meta.xml
<CustomObject>
    <description>Object that will be used to create a FACTS case</description>
    <label>Incident</label>
    <nameField>
        <displayFormat>INC-{00000000}</displayFormat>
        <label>Incident Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incidents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>