unpackaged/main/default/objects/Incident__c/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <label>Brand</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>(ri)1</fullName>
            </value>
            <value>
                <fullName>100 Anos</fullName>
            </value>
            <value>
                <fullName>2 Gingers</fullName>
            </value>
            <value>
                <fullName>Aftershock</fullName>
            </value>
            <value>
                <fullName>Alberta</fullName>
            </value>
            <value>
                <fullName>Alberta Premium</fullName>
            </value>
            <value>
                <fullName>Alberta Pure</fullName>
            </value>
            <value>
                <fullName>Alberta Springs</fullName>
            </value>
            <value>
                <fullName>AO</fullName>
            </value>
            <value>
                <fullName>Ardmore</fullName>
            </value>
            <value>
                <fullName>Auchentoshan</fullName>
            </value>
            <value>
                <fullName>Baker's</fullName>
            </value>
            <value>
                <fullName>Banff Ice</fullName>
            </value>
            <value>
                <fullName>Basil Hayden's</fullName>
            </value>
            <value>
                <fullName>Booker's</fullName>
            </value>
            <value>
                <fullName>Bowmore</fullName>
            </value>
            <value>
                <fullName>Bruxo</fullName>
            </value>
            <value>
                <fullName>Calico Jack</fullName>
            </value>
            <value>
                <fullName>Canadian Club</fullName>
            </value>
            <value>
                <fullName>Castellana</fullName>
            </value>
            <value>
                <fullName>Cockburn's</fullName>
            </value>
            <value>
                <fullName>Conch</fullName>
            </value>
            <value>
                <fullName>Connemara</fullName>
            </value>
            <value>
                <fullName>Courvoisier</fullName>
            </value>
            <value>
                <fullName>Cruzan</fullName>
            </value>
            <value>
                <fullName>DeKuyper</fullName>
            </value>
            <value>
                <fullName>DYC</fullName>
            </value>
            <value>
                <fullName>EFFEN</fullName>
            </value>
            <value>
                <fullName>El Tesoro</fullName>
            </value>
            <value>
                <fullName>Gilbey's</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>