unpackaged/main/default/objects/Incident__c/fields/Issue_Definition__c.field-meta.xml
<CustomField>
    <fullName>Issue_Definition__c</fullName>
    <label>Issue Definition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Foreign Object</fullName>
            </value>
            <value>
                <fullName>Cloudy/Discoloured</fullName>
            </value>
            <value>
                <fullName>Broken/Cracked</fullName>
            </value>
            <value>
                <fullName>Leaking</fullName>
            </value>
            <value>
                <fullName>Label Missing/Torn/Smudged/Loose</fullName>
            </value>
            <value>
                <fullName>Missing Refund Statement</fullName>
            </value>
            <value>
                <fullName>Broken Closure</fullName>
            </value>
            <value>
                <fullName>Torn/Crushed</fullName>
            </value>
            <value>
                <fullName>Defective Glue</fullName>
            </value>
            <value>
                <fullName>SCC/UPC Barcode</fullName>
            </value>
            <value>
                <fullName>Open Case</fullName>
            </value>
            <value>
                <fullName>Pallet Concern</fullName>
            </value>
            <value>
                <fullName>Anti-Skid</fullName>
            </value>
            <value>
                <fullName>Language/Label Violation</fullName>
            </value>
            <value>
                <fullName>Missing/Tampered Seal</fullName>
            </value>
            <value>
                <fullName>First Time User – Did not Like</fullName>
            </value>
            <value>
                <fullName>Tastes Different than Previous Purchase(s)</fullName>
            </value>
            <value>
                <fullName>Low Carbonation/Flat</fullName>
            </value>
            <value>
                <fullName>Product Cloudy/Hazey</fullName>
            </value>
            <value>
                <fullName>Color Different</fullName>
            </value>
            <value>
                <fullName>Frozen</fullName>
            </value>
            <value>
                <fullName>Foreign Object/Particulate</fullName>
            </value>
            <value>
                <fullName>Broken Cork</fullName>
            </value>
            <value>
                <fullName>Leaking Bottle</fullName>
            </value>
            <value>
                <fullName>Closure broken/will not seal</fullName>
            </value>
            <value>
                <fullName>Broken Bottle</fullName>
            </value>
            <value>
                <fullName>Incorrect Label</fullName>
            </value>
            <value>
                <fullName>Tastes Different</fullName>
            </value>
            <value>
                <fullName>Missing Tamper Band/Seal</fullName>
            </value>
            <value>
                <fullName>Label Issue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>