unpackaged/main/default/objects/Incident__c/fields/Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Issue_Type__c</fullName>
    <label>Issue Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>Liquid</fullName>
            </value>
            <value>
                <fullName>Packaging</fullName>
            </value>
            <value>
                <fullName>Shipping Requirements</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>