unpackaged/main/default/objects/Incident__c/fields/Parent_Incident__c.field-meta.xml
<CustomField>
    <fullName>Parent_Incident__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Incident</label>
    <referenceTo>Incident__c</referenceTo>
    <relationshipLabel>Incidents</relationshipLabel>
    <relationshipName>Incidents</relationshipName>
    <type>Lookup</type>
</CustomField>