unpackaged/main/default/objects/Incident__c/fields/Product_Size__c.field-meta.xml
<CustomField>
    <fullName>Product_Size__c</fullName>
    <label>Product Size</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>50ml</fullName>
            </value>
            <value>
                <fullName>60ml</fullName>
            </value>
            <value>
                <fullName>100ml</fullName>
            </value>
            <value>
                <fullName>180ml</fullName>
            </value>
            <value>
                <fullName>200ml</fullName>
            </value>
            <value>
                <fullName>330ml</fullName>
            </value>
            <value>
                <fullName>350ml</fullName>
            </value>
            <value>
                <fullName>355ml</fullName>
            </value>
            <value>
                <fullName>375ml</fullName>
            </value>
            <value>
                <fullName>500ml</fullName>
            </value>
            <value>
                <fullName>700ml</fullName>
            </value>
            <value>
                <fullName>750ml</fullName>
            </value>
            <value>
                <fullName>1L</fullName>
            </value>
            <value>
                <fullName>1125ml</fullName>
            </value>
            <value>
                <fullName>1140ml</fullName>
            </value>
            <value>
                <fullName>1.5L</fullName>
            </value>
            <value>
                <fullName>1.75L</fullName>
            </value>
            <value>
                <fullName>3L</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>