unpackaged/main/default/objects/Incident__c/fields/SCC__c.field-meta.xml
<CustomField>
    <fullName>SCC__c</fullName>
    <label>SCC</label>
    <length>80</length>
    <type>Text</type>
</CustomField>