unpackaged/main/default/objects/Incident__c/recordTypes/Consumer.recordType-meta.xml
<RecordType>
    <fullName>Consumer</fullName>
    <active>true</active>
    <label>Consumer</label>
</RecordType>