unpackaged/main/default/objects/Incident__c/recordTypes/Retail.recordType-meta.xml
<RecordType>
    <fullName>Retail</fullName>
    <active>true</active>
    <label>Retail</label>
</RecordType>