unpackaged/main/default/objects/Incident__c/listViews/FACTS_Incident.listView-meta.xml
<ListView>
    <fullName>FACTS_Incident</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Product_Size__c</columns>
    <columns>Impact__c</columns>
    <columns>Bottling_Plant__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Incident__c.FACTS</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>FACTS</label>
</ListView>